[package]
name = "event-bus"
version = "0.1.0"
authors = ["Jaden Buchan <me@jaden.bio>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jad3n/event-bus"
documentation = "https://docs.rs/event-bus/"
description = """
This crate is designed to add
a basic event bus system which
allows you to subscribe and
dispatch events.
"""

[dependencies]
log = "0.4"
lazy_static = "1.4"